Feat: [#7] SonarQube code Smell 수정